Issue#1: Added Nuget properties to the project

--- a/src/HttpMiddlewareExtensions.Sample/HttpMiddlewareExtensions.Sample.csproj
+++ b/src/HttpMiddlewareExtensions.Sample/HttpMiddlewareExtensions.Sample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HttpMiddlewareExtensions\HttpMiddlewareExtensions\HttpMiddlewareExtensions.csproj" />
+    <ProjectReference Include="..\HttpMiddlewareExtensions\HttpMiddlewareExtensions.csproj" />
   </ItemGroup>
 
 
