--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -73,3 +73,6 @@ jobs:
 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+
+    - name: Nuget Pack
+      run: dotnet pack --configuration Release --no-restore
