--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -75,4 +75,4 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
 
     - name: Nuget Pack
-      run: dotnet pack --configuration Release --no-restore
+      run: dotnet pack HttpMiddlewareExtensions/HttpMiddlewareExtensions.csproj --configuration Release --no-restore -p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersionV2 }}
