Issue#1: Updated readme.md, added project url nuget property and updated ci.yml.

--- a/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
+++ b/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
@@ -11,6 +11,7 @@
     <Description>Http Middleware extension to create developer exception response inline with UseDeveloperExceptionPage.</Description>
     <PackageDescription>Http Middleware extension to create developer exception response inline with useDeveloperExceptionPage.</PackageDescription>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <ProjectUrl>https://ankitvijay.github.io/DeveloperExceptionJsonResponse/</ProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
