Issue#1: Updated Nugetpackage description and deleted unused project

--- a/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
+++ b/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
@@ -8,8 +8,8 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>Ankit Vijay</Authors>
-    <Description>Http Middleware extension to create developer exception response inline with UseDeveloperExceptionPage.</Description>
-    <PackageDescription>Http Middleware extension to create developer exception response inline with useDeveloperExceptionPage.</PackageDescription>
+    <Description>Middleware extension that returns Exception as HTTP 500 error in the form of JSON response.</Description>
+    <PackageDescription>Middleware extension that returns Exception as HTTP 500 error in the form of JSON response.</PackageDescription>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <ProjectUrl>https://ankitvijay.github.io/DeveloperExceptionJsonResponse/</ProjectUrl>
   </PropertyGroup>
